# FusionAiAutoCoder

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  concept.md  monkeytype.ini  mypy.ini  next_steps.md  pyproject.toml  pyrightconfig.json  pytest.ini  pytype.cfg  requirements.md  requirements.txt  setup.cfg  stubgen.ini  typeguard.ini
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml  monitoring.yml  type_check.yml
docker-templates/: Dockerfile  docker-ncads_v4.yml
docs/: api.md  usage.md
docs/build_docs/: concept.md  implementation.md  next_steps.md
kubernetes/dev/: deployment.yaml
kubernetes/prod/: deployment.yaml
scripts/: aks_setup.sh  docker-entrypoint.sh  scaffold_project.sh  setup_dev_env.sh  setup_vm.sh
src/: __init__.py  api.py  cli.py  main.py  types.py  utils.py  validation.py
src/config/: config-multi-agents.py  config_multi_agents.py  constants.py  logging_config.py  pydantic_types.py
src/integration/: azure_foundry.py
src/mocks/: azure_ai_foundry.py
src/utils/: type_check.py
terraform/: main.tf
tests/: conftest.py  test_agents.py  test_api.py  test_batch.py  test_cli.py  test_main.py  test_torch_install.py  test_utils.py  test_validation.py  verify_torch.py  verify_torch_install.py
