[mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_optional = True
strict_equality = True

[mypy.plugins.numpy.*]
numpy_mypy_plugin = True

[mypy.plugins.torch.*]
init_forbid_untyped_decorators = False

[options]
python_requires = >=3.11
install_requires =
    torch>=2.3.1
    torchvision>=0.18.1
    torchaudio>=2.3.1
    numpy>=1.24.3
    fastapi>=0.115.12
    pydantic>=2.10.6
    typing-extensions>=4.8.0
    mypy>=1.8.0
    pytest>=8.0.0

[options.extras_require]
dev =
    black>=24.1.0
    flake8>=7.0.0
    mypy>=1.8.0
    pytest>=8.0.0
    pytest-asyncio>=0.23.0
    pytest-cov>=4.1.0